tests/expectations/parser/structs/only_comma_separators_fail.out
Error [EPAR0370005]: expected '}', ',' -- found ';'
    --> test:3:14
     |
   3 |         x: u8;
     |              ^
